kubernetes/k8s-fylr.yml
apiVersion: v1
kind: Namespace
metadata:
  name: <fylr-namespace>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fylr
  namespace: <fylr-namespace>
spec:
  selector:
    matchLabels:
      app: fylr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fylr
    spec:
      containers:
      - image: "docker.fylr.io/fylr/fylr:develop"
        name: fylr
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: webfrontend
        - containerPort: 8081
          name: api-port
        volumeMounts:
        - name: fylr-configuration
          mountPath: /fylr/config
      volumes:
      - name: fylr-configuration
        configMap:
          name: fylr-configmap
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fylr
  name: prod-fylr
  namespace: <fylr-namespace>
spec:
  selector:
    app: fylr
  ports:
    - name: "http"
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: "https"
      protocol: TCP
      port: 8443
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: <fylr-namespace>
spec:
  tls:
  - hosts:
    - <fylr-external-url>
    secretName: my-tls-secret-name
  rules:
  - host: <fylr-external-url>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: "prod-fylr"
            port:
              number: 8080
